--- a/source/_sass/_issues.scss
+++ b/source/_sass/_issues.scss
@@ -72,3 +72,11 @@
     color: $primary-orange;
   }
 }
+
+// issues in index key
+.issue--key {
+  &::before {
+    margin-right: 1rem;
+    font-size: 1.2rem;
+  }
+}
