--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -11,6 +11,8 @@
   <link rel="shortcut icon" href="{{'/images/rfa-favicon.png' | relative_url}}" type="image/x-icon">
   <link rel="stylesheet" href="{{'/vendor/foundation.min.css' | relative_url}}">
   <link rel="stylesheet" href="{{'/vendor/styleguide-v2.1.css' | relative_url}}">
+  {%comment%}
+{%endcomment%}
   <link rel="stylesheet" href="{{ '/assets/style.min.css' | relative_url}}">
 
   <script src="https://use.typekit.net/gyb7dga.js"></script>
