Begin locking header behavior

--- a/source/_includes/table.html
+++ b/source/_includes/table.html
@@ -23,7 +23,7 @@
 <section class="table">
   <div class="row expanded">
     <table class="js-active-key slide-panel__wrapper--compact fixed-section-wrapper">
-      <thead class="fixed-section">
+      <thead>
         <tr>
           <th>Criteria</th>
           <th class="title-leading"><a
