--- a/source/_sass/_compact-panel.scss
+++ b/source/_sass/_compact-panel.scss
@@ -4,9 +4,13 @@
 .key-control .slide-panel__open-trigger {
   position: absolute;
   right: 0;
-  padding-top: 5px;
+  padding-top: 4px;
+  font-size: 0.8rem;
+  @include breakpoint ($large) {
+    padding-top: 5px;
+    font-size: 0.9rem;
+  }
   cursor: pointer;
-  font-size: 0.9rem;
   text-decoration: none;
   i {
     vertical-align: bottom;
@@ -14,6 +18,7 @@
 }
 
 .slide-panel {
+  z-index: 5;
   visibility: hidden;
   transition: visibility 0.5s;
   &.is-visible {
@@ -104,3 +109,5 @@
     }
   }
 }
+
+
