Change index url in goBack function

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -36,7 +36,7 @@
   <script src="{{'/assets/bundle.js' | relative_url}}"></script>
   <script>
     function goBack() {
-      const indexUrl = 'https://objectively.github.io/rfa-2019/';
+      const indexUrl = 'https://objectively.is/rfa-2019/';
       const referrerUrl = document.referrer;
       if (referrerUrl === indexUrl) {
         window.history.back();
