--- a/source/_includes/criteria-dropdown-nav.html
+++ b/source/_includes/criteria-dropdown-nav.html
@@ -7,7 +7,7 @@
       <select aria-label="criteria menu" class="criteria-dropdown-nav__select">
           <option class="criteria-dropdown-nav__option" >Select a Criteria</option>
         {% for criteria in allCriteria | sort: order %}
-          <option class="criteria-dropdown-nav__option" value="{{criteria.title | slugify }}" data-page="{{ criteria.title | slugify }}" data-path="{{ criteria.title | slugify | append: '.html'| prepend: '/state-standard-of-excellence/' | relative_url }}">{{criteria.title}}</option>
+          <option class="criteria-dropdown-nav__option" value="{{criteria.title | replace: "/", "0000" | slugify | remove: "0000" }}" data-page="{{ criteria.title | replace: "/", "0000" | slugify | remove: "0000" }}" data-path="{{ criteria.title | replace: "/", "0000" | slugify | remove: "0000" | append: '.html'| prepend: '/state-standard-of-excellence/' | relative_url }}">{{criteria.title}}</option>
         {% endfor %}
       </select>
     </div>
