Tweak nav menu style

--- a/source/_sass/_top-bar.scss
+++ b/source/_sass/_top-bar.scss
@@ -27,7 +27,7 @@
   }
   &__controls {
     text-align: left;
-    margin-bottom: 2.5rem;
+    margin-bottom: 2rem;
   }
   &__button {
     z-index: 2;
@@ -52,23 +52,25 @@
   overflow: auto;
   width: 25rem;
   @include breakpoint($large) {
-    width: 18rem;
+    width: 19rem;
   }
-  
   .main-link {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 700;
+    padding: 1rem 3rem;
   }
   .sub-link {
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 500;
+    padding: 0.5rem 3rem;
   }
   .main-menu--links a {
     color: #fff;
     text-align: left;
     border-bottom: none;
+    letter-spacing: 0.03em;
     text-transform: none;
-    padding: 0.5rem 3rem;
+
     cursor: pointer;
     line-height: 1.8rem;
   }
