--- a/source/_sass/_downloads.scss
+++ b/source/_sass/_downloads.scss
@@ -48,12 +48,13 @@
   margin: 1rem;
   &__title {
     font-weight: 700;
-    font-size: 3rem;
+    font-size: 3.2rem;
     margin: 0 1rem;
+    margin-bottom: -0.6rem;
   }
   &__subtitle {
+    font-weight: 500;
     text-align: left;
-
   }
   &__icon {
     @extend .u-material-icons;
