Download buttons on small and center social media mail icon

--- a/source/_sass/_controls.scss
+++ b/source/_sass/_controls.scss
@@ -130,9 +130,11 @@
 }
 
 .email {
-  i {
-    margin-top: -2px;
-    font-size: 1.3rem;
+  a {
+    padding-top: 0.55rem;
+    i {
+      font-size: 1.3rem;
+    }
   }
 }
 
